Opened 17 years ago

Closed 17 years ago

#1695 closed bug (fixed)

Can't extract tar.bz2 files with expander

Reported by: ekdahl Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Expander Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

I haven't investigated the cause of this. Using gcc 4 build.

Attaching a patch that solves it for me (and simplifies the expander rule somewhat).

Attachments (2)

expander.diff (1.4 KB ) - added by ekdahl 17 years ago.
expander.2.diff (1.4 KB ) - added by ekdahl 17 years ago.
New patch

Download all attachments as: .zip

Change History (5)

by ekdahl, 17 years ago

Attachment: expander.diff added

comment:1 by ekdahl, 17 years ago

Forgot to mention that when clicking list files, no contents are shown. When trying to extract, nothing happens.

by ekdahl, 17 years ago

Attachment: expander.2.diff added

New patch

comment:2 by axeld, 17 years ago

Owner: changed from korli to axeld
Status: newassigned

comment:3 by axeld, 17 years ago

Resolution: fixed
Status: assignedclosed

Thanks! I've applied it in hrev23242.

Note: See TracTickets for help on using tickets.