Applied patch by Fredrik Ekdahl, this fixes bug #1695.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23242 a95241bf-73f2-0310-859d-f6bbb57e9c96